fern/versions/v0.8.0/pages/devnotes/index.mdx
---
title: "Dev Notes"
description: "In-depth guides, tutorials, and insights about synthetic data generation with NeMo Data Designer."
layout: overview
---

import { BlogCard, BlogGrid } from "@/components/BlogCard";

Welcome to NeMo Data Designer Dev Notes — in-depth guides, benchmark write-ups, and insights from the team building NeMo Data Designer.

<BlogGrid>
  <BlogCard
    href="/dev-notes/pause-inspect-resume"
    title="Pause, Inspect, Resume"
    description="Workflow chaining turns long generation jobs into resumable stages you can inspect, override, compare, and hand off. Human review is one useful pattern."
    date="July 13, 2026"
    authors={["amanoel"]}
    image={<img src="/assets/document-hitl/workflow-chaining-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/image-generation-for-multimodal-data-pipelines"
    title="Image Generation for Multimodal Data Pipelines"
    description="From document VQA to autonomous-vehicle scenes, X-rays, drone frames, and funny pet edits — controlled image datasets you can inspect row by row."
    date="July 2, 2026"
    authors={["nmulepati"]}
    image={<img src="/assets/image-generation-for-multimodal-data-pipelines/image-generation-hero.jpg" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/designing-nemotron-personas"
    title="Designing Nemotron-Personas"
    description="The compound-AI pipeline behind Nemotron-Personas seeding Nemotron training. Now open-sourced: fork it, add your data, ship personas for any use case."
    date="Jun 1, 2026"
    authors={["ymeyer", "dcorneil"]}
    image={<img src="/assets/nemotron-personas/nemotron-personas-world-map.png" alt="" loading="lazy" style={{ objectPosition: "top" }} />}
  />
  <BlogCard
    href="/dev-notes/prompt-sensitivity"
    title="Mitigating Prompt Sensitivity"
    description="A Data Designer pipeline that generates thousands of regex-paired prompt preambles to manufacture format robustness — six diversity samplers, four quality judges, dual-purpose for SFT and RL."
    date="May 28, 2026"
    authors={["dnathawani"]}
    image={<img src="/assets/prompt-sensitivity/prompt-sensitivity-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/retriever-sdg-toolkit"
    title="Retriever SDG Plugin"
    description="The Data Designer plugin behind NVDocs and the bootstrap SDG stage for NeMo embedding and reranking recipes."
    date="May 19, 2026"
    authors={["sthan", "oliverholworthy", "nmulepati", "jgreco"]}
    image={<img src="/assets/retrieval-sdg-toolkit/pipeline.svg" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/have-it-your-way"
    title="Have It Your Way"
    description="A plugin framework for the custom pieces every real project ends up needing."
    date="May 5, 2026"
    authors={["jgreco", "etramel"]}
    image={<img src="/assets/have-it-your-way/data-designer-plugins-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/vlm-long-document-understanding"
    title="Training a VLM to Understand Long Documents"
    description="An iterative SDG story: 11.4M synthetic visual QA pairs, document-reasoning pipelines, and long-context VLM training lessons."
    date="Apr 28, 2026"
    authors={["nmulepati", "trintamaki", "etramel", "nvilia"]}
    image={<img src="/assets/vlm-long-document-understanding/vlm-sdg-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/push-datasets-to-hugging-face-hub"
    title="Push Datasets to Hugging Face Hub"
    description="Call .push_to_hub() and ship a generated dataset straight to a live HF dataset card. Done and dusted."
    date="Apr 16, 2026"
    authors={["nmulepati", "davanstrien"]}
    image={<img src="/assets/push-datasets-to-hugging-face-hub/push-to-hub-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/text-to-sql-for-nemotron-super"
    title="Engineering an Enterprise-Grade Text-to-SQL Dataset"
    description="A pipeline with conditional sampling, three-stage LLM generation, code validators, and judge scoring — boosting Nemotron Super on BIRD from 26.77 → 41.80."
    date="Apr 14, 2026"
    authors={["dnathawani", "ymeyer", "mvansegbroeck"]}
    image={<img src="/assets/text-to-sql/text-to-sql-pipeline.jpg" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/async-all-the-way-down"
    title="Async All the Way Down"
    description="How async dispatch in the engine cuts wall time across deep dependency pipelines — same config, same prompts, 1.3× faster on average."
    date="Apr 2, 2026"
    authors={["amanoel", "nmulepati", "etramel", "jgreco"]}
    image={<img src="/assets/async-all-the-way-down/async-engine-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/owning-the-model-stack"
    title="Owning the Model Stack"
    description="Adaptive concurrency, throttle keying, retry boundaries — owning the whole model client to discover provider capacity at runtime."
    date="Mar 25, 2026"
    authors={["nmulepati"]}
    image={<img src="/assets/owning-the-model-stack/native-model-client-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/data-designer-got-skills"
    title="Data Designer Got Skills"
    description="A CLI and skill workflow that lets agents drive Data Designer end-to-end — leaner context, fewer tool calls, the same output."
    date="Mar 24, 2026"
    authors={["jgreco"]}
    image={<img src="/assets/data-designer-got-skills/hero_data_designer_got_skills.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/search-agent"
    title="Search Agent SFT Data"
    description="Multi-turn search agent trajectories for Nemotron Super post-training — Tavily web search, Wikidata KG seeding, BrowseComp-style obfuscation."
    date="Mar 12, 2026"
    authors={["dnathawani"]}
    image={<img src="/assets/search-agent/wikidata-graph-walk.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/structured-outputs-from-nemotron"
    title="Structured Outputs from Nemotron"
    description="Schema-constrained outputs across CSV / JSON / TOML / XML / YAML — JSONSchemaBench and StructEval-Text results, plus the recipe."
    date="Feb 18, 2026"
    authors={["dnathawani"]}
    image={<img src="/assets/structured-outputs-from-nemotron/structured-outputs-sample-record.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/deep-research-trajectories"
    title="Deep Research Trajectories"
    description="MCP tool-use trajectories for training deep research agents — search, open, find, answer over a static BM25 corpus, no web APIs needed."
    date="Feb 10, 2026"
    authors={["etramel"]}
  />
  <BlogCard
    href="/dev-notes/design-principles"
    title="Designing Data Designer"
    description="Why SDG is a systems problem, and the design principles behind a composable orchestration framework — declarative columns, imperative engine."
    date="Feb 10, 2026"
    authors={["kthadaka"]}
    image={<img src="/assets/design-principles/design-principles-hero.png" alt="" loading="lazy" />}
  />
  <BlogCard
    href="/dev-notes/rqa-dataset"
    title="Graduate-Level Science Reasoning (RQA)"
    description="A massive collection of graduate-level reasoning samples seeded from Common Crawl — improves Nemotron 3 Nano on MMLU-Pro, Math 500, GSM8K."
    date="Feb 4, 2026"
    authors={["dcorneil", "etramel"]}
    image={<img src="/images/rqa-blog.png" alt="" loading="lazy" />}
  />
</BlogGrid>
